--- a/index.html
+++ b/index.html
@@ -13,29 +13,31 @@
     </head>
 
     <body>
-        <div id="intro"> 
-            
-        </div>
-
-        <div id="projects" class="container">
-            <div class="title center-align">
-                <div style="font-family: ExtraBold; color: #E0E0E0; font-size: 3em;"> 
-                    P R O J E C T S
-                </div>
-                <div style="font-family: bold; color: #9E3222; font-size: 1em; margin-top: -30px">
-                    P R O J E C T S
-                </div>
+        <section>
+            <div id="intro"> 
+                
             </div>
 
-            <div id="cards" class="row">
+            <div id="projects" class="container">
+                <div class="title center-align">
+                    <div style="font-family: ExtraBold; color: #E0E0E0; font-size: 3em;"> 
+                        P R O J E C T S
+                    </div>
+                    <div style="font-family: bold; color: #9E3222; font-size: 1em; margin-top: -30px">
+                        P R O J E C T S
+                    </div>
+                </div>
+
+                <div id="cards" class="row">
+
+                </div>
 
             </div>
+        </section>
 
-        </div>
+        <footer class="page-footer" id="footer">
 
-        <div id="footer">
-
-        </div>
+        </footer>
 
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="js/materialize.min.js"></script>
