--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!-- Favicon -->
+        <link rel="icon" href="assets/img/logo/logo.svg">
     </head>
 
     <body>
