--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!-- Favicon -->
         <link rel="icon" href="assets/img/logo/logo.svg">
+        <!-- Title -->
+        <title>Larissa Galeno</title>
     </head>
 
     <body>
